# writer-assistance

./: .gitignore  Makefile  README.md  VISION.md  devlogs.md  package.json  playwright.config.ts  pnpm-lock.yaml  program.md  run.sh
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_projects.py  0002_create_resources.py  0003_enforce_resource_logical_path_uniqueness.py  0004_create_annotations.py  0005_create_analysis_runs.py  0006_add_lens_discovery_to_analysis_runs.py
apps/api/src/writer_assistance_api/: app.py  config.py  db.py  disk_storage.py  main.py  models.py  storage.py
apps/api/src/writer_assistance_api/ai/: __init__.py  anthropic_vertex_client.py  client.py  fake_client.py
apps/api/src/writer_assistance_api/routes/: analysis_runs.py  annotations.py  projects.py  resources.py
apps/api/src/writer_assistance_api/schemas/: analysis_runs.py  annotations.py  projects.py  resources.py
apps/api/src/writer_assistance_api/services/: analysis_runs.py  annotations.py  projects.py  resources.py
apps/api/tests/: test_analysis_runs_api.py  test_annotations_api.py  test_anthropic_vertex_client.py  test_health.py  test_projects_api.py  test_resources_api.py
apps/web/: index.html  package.json  vite.config.ts
backend/: .gitignore  migrate.py  pyproject.toml
backend/app/: ai.py  db.py  main.py  pdf.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
sample_docs/: housing_market_2025.md  remote_work_evolution.md
(+29 files in other folders)
