[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "anthropic>=0.100.0",
    "docling>=2.93.0",
    "fastapi>=0.136.1",
    "google-auth>=2.50.0",
    "python-multipart>=0.0.27",
    "requests>=2.33.1",
    "uvicorn>=0.46.0",
]
