[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "writer-assistance-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "fastapi>=0.115.0",
  "sqlalchemy>=2.0.36",
  "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/writer_assistance_api"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []
